# stream-client

./: .buildinfo  .clang-format  .clang-lint-ignore  .clang-tidy  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  boost@1.65.1.rb  boost@1.66.rb  build.sh  genindex.html  index.html  lint.py  objects.inv  search.html  searchindex.js  stream-client-config.cmake.in  streamclientConfig.cmake.in
.doctrees/: environment.pickle  genindex.doctree  index.doctree
.doctrees/api/: class_view_hierarchy.doctree  classstream__client_1_1base__logger.doctree  classstream__client_1_1base__socket.doctree  classstream__client_1_1connector_1_1base__connection__pool.doctree  classstream__client_1_1connector_1_1base__connector.doctree  classstream__client_1_1connector_1_1conservative__strategy.doctree  classstream__client_1_1connector_1_1greedy__strategy.doctree  classstream__client_1_1connector_1_1pool__strategy.doctree  classstream__client_1_1cout__logger.doctree  classstream__client_1_1datagram__socket.doctree  classstream__client_1_1detail_1_1timed__base.doctree  classstream__client_1_1detail_1_1timed__base_1_1expiration.doctree  classstream__client_1_1func__logger.doctree  classstream__client_1_1http_1_1base__socket.doctree  classstream__client_1_1log__interface.doctree  classstream__client_1_1resolver_1_1base__resolver.doctree  classstream__client_1_1ssl_1_1stream__socket.doctree  classstream__client_1_1stream_1_1detail_1_1static__allocator.doctree  classstream__client_1_1stream_1_1detail_1_1static__pool.doctree  classstream__client_1_1stream__socket.doctree  define_logger_8hpp_1a0ce9642ba206b59ea754f9846978c875.doctree  define_logger_8hpp_1a23e93a399a34521a42561aa085310135.doctree  define_logger_8hpp_1a89308a8809f68882a600c74ba8058ad0.doctree  define_logger_8hpp_1a9f5d4dbab70293fab529a05a40b5e4e0.doctree  define_logger_8hpp_1ab117546549783a058d0321a287699579.doctree  define_logger_8hpp_1ab50963a21e16c7269c1289d3f52476cc.doctree  define_logger_8hpp_1aff5be2dadf5b4e74a8f1f91b1f94e01a.doctree  dir_stream-client.doctree  dir_stream-client_connector.doctree  dir_stream-client_connector_impl.doctree  dir_stream-client_detail.doctree  dir_stream-client_impl.doctree  dir_stream-client_resolver.doctree  dir_stream-client_resolver_impl.doctree  dir_stream-client_stream.doctree  dir_stream-client_stream_detail.doctree  dir_stream-client_stream_impl.doctree  enum_namespacestream__client_1_1resolver_1af59084edea41ab42e475158d9808f923.doctree  enum_namespacestream__client_1a959565b4c9d9639814435848606075a4.doctree  file_stream-client_connector_connection_pool.hpp.doctree  (+91 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pull_request.yml  push_develop.yml  push_master.yml  run.sh
_sources/: index.rst.txt
_sources/api/: class_view_hierarchy.rst.txt  classstream__client_1_1base__logger.rst.txt  classstream__client_1_1base__socket.rst.txt  classstream__client_1_1connector_1_1base__connection__pool.rst.txt  classstream__client_1_1connector_1_1base__connector.rst.txt  classstream__client_1_1connector_1_1conservative__strategy.rst.txt  classstream__client_1_1connector_1_1greedy__strategy.rst.txt  classstream__client_1_1connector_1_1pool__strategy.rst.txt  classstream__client_1_1cout__logger.rst.txt  classstream__client_1_1datagram__socket.rst.txt  classstream__client_1_1detail_1_1timed__base.rst.txt  classstream__client_1_1detail_1_1timed__base_1_1expiration.rst.txt  classstream__client_1_1func__logger.rst.txt  dir_stream-client.rst.txt  (+116 more)
api/: class_view_hierarchy.html  classstream__client_1_1base__logger.html  classstream__client_1_1base__socket.html  classstream__client_1_1connector_1_1base__connection__pool.html  classstream__client_1_1connector_1_1base__connector.html  classstream__client_1_1connector_1_1conservative__strategy.html  classstream__client_1_1connector_1_1greedy__strategy.html  classstream__client_1_1connector_1_1pool__strategy.html  classstream__client_1_1cout__logger.html  classstream__client_1_1datagram__socket.html  classstream__client_1_1detail_1_1timed__base.html  classstream__client_1_1detail_1_1timed__base_1_1expiration.html  classstream__client_1_1func__logger.html  classstream__client_1_1http_1_1base__socket.html  classstream__client_1_1log__interface.html  classstream__client_1_1resolver_1_1base__resolver.html  classstream__client_1_1ssl_1_1stream__socket.html  classstream__client_1_1stream_1_1detail_1_1static__allocator.html  classstream__client_1_1stream_1_1detail_1_1static__pool.html  classstream__client_1_1stream__socket.html  define_logger_8hpp_1a0ce9642ba206b59ea754f9846978c875.html  define_logger_8hpp_1a23e93a399a34521a42561aa085310135.html  define_logger_8hpp_1a89308a8809f68882a600c74ba8058ad0.html  define_logger_8hpp_1a9f5d4dbab70293fab529a05a40b5e4e0.html  define_logger_8hpp_1ab117546549783a058d0321a287699579.html  define_logger_8hpp_1ab50963a21e16c7269c1289d3f52476cc.html  define_logger_8hpp_1aff5be2dadf5b4e74a8f1f91b1f94e01a.html  dir_stream-client.html  dir_stream-client_connector.html  dir_stream-client_connector_impl.html  dir_stream-client_detail.html  dir_stream-client_impl.html  dir_stream-client_resolver.html  dir_stream-client_resolver_impl.html  dir_stream-client_stream.html  dir_stream-client_stream_detail.html  dir_stream-client_stream_impl.html  enum_namespacestream__client_1_1resolver_1af59084edea41ab42e475158d9808f923.html  enum_namespacestream__client_1a959565b4c9d9639814435848606075a4.html  file_stream-client_connector_connection_pool.hpp.html  (+91 more)
ci/: travis-linux.sh  travis-osx.sh
docs/: CMakeLists.txt  Doxyfile.in  FindSphinx.cmake  conf.py.in  genindex.rst.in  index.rst.in
example/: CMakeLists.txt
example/http/: CMakeLists.txt  example_client.cpp  example_connector.cpp  example_pool.cpp
test/: CMakeLists.txt  fixtures.hpp  general.cpp  resolver.cpp  transmission.cpp
test/utils/: client.hpp  common.hpp  echo_server.hpp
tests/: CMakeLists.txt  CMakeLists.txt.in  fixtures.hpp  logger.cpp  pool.cpp  timeout.cpp  transmission.cpp
tests/utils/: echo_server.hpp
(+24 files in other folders)
